--- a/default.html
+++ b/default.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
-    <img class="banner" src="/assets/images/mi-banner.jpg" alt="Banner" style="width:100%; height:auto;">
+    <img class="banner" src="https://github.com/perperiv9/ivan_perperiv9.github.io/blob/main/pixlr-image-generator-afd0811b-c70c-4190-af73-f17a0df95edb.png" alt="Banner" style="width:100%; height:auto;">
   </div>
 </body>
 </html>
