--- a/default.html
+++ b/default.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/x-icon" href="https://github.com/perperiv9/ivan_perperiv9.github.io/blob/main/favicon.ico">
 </head>
 <body>
- 
+   <div>
+     <img class="banner" src="" alt="Banner" style="width:100%; height:auto;">
+   </div>
 </body>
 </html>
